--- a/src/main/webapp/pages/sign-up.html
+++ b/src/main/webapp/pages/sign-up.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Instagram reg Page</title>
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../img/instic.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/static/style/style.css">
+    <link rel="shortcut icon" href="/static/img/instic.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="top">
             <div class="logo">
-                <img src="../img/instagram.png" alt="instagram" style="width: 175px;">
+                <img src="/static/img/instagram.png" alt="instagram" style="width: 175px;">
                 <h2 class="textReg">Sign up to see photos and videos from your friends.</h2>
             </div>
             <div class="dif">
