--- a/src/main/webapp/pages/post.html
+++ b/src/main/webapp/pages/post.html
@@ -5,10 +5,12 @@
     <title>Post</title>
 </head>
 <body>
-<form enctype="multipart/form-data" method="post">
+<form method="post" action="/post" enctype="multipart/form-data">
     <p>Upload your photos to the server</p>
-    <p><input type="file" name="photo" multiple accept="image/*,image/jpeg">
-         <input type="submit" value="Send post"></p>
+    <p>
+        <input type="file" name="image">
+        <input type="submit" value="Send post">
+    </p>
 </form>
 </body>
 </html>
