All posts view feature

--- a/src/main/webapp/pages/post.html
+++ b/src/main/webapp/pages/post.html
@@ -9,6 +9,8 @@
     <p>Upload your photos to the server</p>
     <p>
         <input type="file" name="image">
+        <label for="description">Description</label>
+        <input type="text" id="description" name="description">
         <input type="submit" value="Send post">
     </p>
 </form>
