--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -17,9 +17,12 @@
             <img src="/static/img/instagram.png" alt="inst">
         </div>
         <div class="search-box">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="search" placeholder="Search">
+            <form method="post">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="search" placeholder="Search">
+            </form>
         </div>
+        <p th:if="!${#strings.isEmpty(message)}" th:text="${message}"></p>
         <nav>
             <ul>
                 <li><a href="#"><i class="fas fa-home"></i></a></li>
