--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -27,8 +27,7 @@
                 <li><a href="/post"><i class="far fa-plus-square"></i></a></li>
                 <li><a href="#"><i class="far fa-compass"></i></a></li>
                 <li><a href="#"><i class="far fa-heart"></i></a></li>
-                <li><a href="#"><img src="/static/img/profile-anonymous2.png" alt="profilepic"></a></li>
-
+                <li><a href="/user-info"><i class="far fa-user"></i></a></li>
             </ul>
         </nav>
     </header>
